--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" n src="img/robotron.png" alt="Robotron">
+            <img class="robo" n src="img/robotron.png" alt="Robotron" data-imagemRobo>
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
@@ -95,6 +95,7 @@
                     </div>
                 </div>
                 <input type="submit" value="Iniciar produção" class="producao" id="producao">
+                <input type="button" value="Escolha a cor do seu robô" class="producao" id="imagemRobo" data-robo>
             </form>
         </section>
     </main>
